@@ -20,14 +20,14 @@ date.timezone=America/Toronto
 	
 	var_dump($s->readRow(2), $x->getError());
 	var_dump($s->readRow(2, 4), $x->getError());	
-	var_dump($s->readRow(2, 5, 6), $x->getError());
+	var_dump($s->readRow(2, 5, 5), $x->getError());
 
 	var_dump($s->readRow(-2));
 	var_dump($s->readRow(22));
 	var_dump($s->readRow(2, -1));
 	var_dump($s->readRow(2, 55));
 	var_dump($s->readRow(2, 2, 1));
-	var_dump($s->readRow(2, 2, 40));
+	var_dump($s->readRow(2, 2, 39));
 
 
 	
@@ -93,6 +93,6 @@ bool(false)
 Warning: ExcelSheet::readRow(): Invalid ending column number '1' in %s on line %d
 bool(false)
 
-Warning: ExcelSheet::readRow(): Invalid ending column number '40' in %s on line %d
+Warning: ExcelSheet::readRow(): Invalid ending column number '39' in %s on line %d
 bool(false)
 OK
