@@ -2,6 +2,7 @@
 	* Added work-around for a bug inside xlSheetIsDate() that detects treats custom number formats as dates
     * Added getSheetByName() method to retrieve sheet by name (original patch by Rob Gagnon)
     * Added basic documentation
+    * Fixed a bug with readRow()/readCol() when end parameter is specified
 
 [2010-08-27] - Version 0.9.0
 	* Added support for LibXL 3.1.0
